--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       }).addTo(map);
 
       // Cargar archivo KML remoto (IMPORTANTE: el link debe ser público)
-      const kmlUrl = "https://drive.google.com/uc?export=download&id=1X47ptXYIS1Fjf2OK-dGgRB5-R8pLCLOl";
+      const kmlUrl = "https://raw.githubusercontent.com/pandersoncc93-design/mapa-en-vivo/refs/heads/main/PA_Postes_Act.kml";
 
       omnivore.kml(kmlUrl)
         .on('ready', function() {
@@ -45,4 +45,5 @@
     </script>
   </body>
 </html>
+
 
