--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 
     // --- RUTAS ESTÁTICAS ---
     const rutas = [
-      { nombre: "Pachacútec", color: "#FFA500", url: "https://raw.githubusercontent.com/pandersoncc93-design/mapa-en-vivo/refs/heads/main/Rutas_Pachacutec.kml" },
-      { nombre: "Villa Los Reyes", color: "#FF0000", url: "https://raw.githubusercontent.com/pandersoncc93-design/mapa-en-vivo/refs/heads/main/Rutas_Villa%20los%20reyes.kml" },
-      { nombre: "Ventanilla Centro", color: "#8000FF", url: "https://raw.githubusercontent.com/pandersoncc93-design/mapa-en-vivo/refs/heads/main/Rutas_Ventanilla%20centro.kml" }
+      { nombre: "Pachacútec", color: "#FFA500", url: "https://raw.githubusercontent.com/pandersonc93-design/mapa-en-vivo/main/Rutas_Pachacutec.kml" },
+      { nombre: "Villa Los Reyes", color: "#FF0000", url: "https://raw.githubusercontent.com/pandersonc93-design/mapa-en-vivo/main/Rutas_Villa%20los%20reyes.kml" },
+      { nombre: "Ventanilla Centro", color: "#8000FF", url: "https://raw.githubusercontent.com/pandersonc93-design/mapa-en-vivo/main/Rutas_Ventanilla%20centro.kml" }
     ];
 
     rutas.forEach(r => {
@@ -69,17 +69,30 @@
       })).addTo(map);
     });
 
-    // --- CAPAS DINÁMICAS (POSTES POR ZONA) ---
+    // --- CAPAS DINÁMICAS (POSTES POR ZONA CON ID) ---
     const capasDinamicas = [
-      { nombre: "Postes Pachacútec", color: "#FFA500", url: "https://raw.githubusercontent.com/pandersoncc93-design/mapa-en-vivo/refs/heads/main/PA_Postes_Act.kml" },
-      { nombre: "Postes Villa Los Reyes", color: "#FF0000", url: "https://raw.githubusercontent.com/pandersoncc93-design/mapa-en-vivo/refs/heads/main/VR_Postes_Act.kml" },
-      { nombre: "Postes Ventanilla Centro", color: "#8000FF", url: "https://raw.githubusercontent.com/pandersoncc93-design/mapa-en-vivo/refs/heads/main/VC_Postes_Act.kml" }
+      { nombre: "Postes Pachacútec", color: "#FFA500", url: "https://raw.githubusercontent.com/pandersonc93-design/mapa-en-vivo/main/PA_Postes_Act.kml" },
+      { nombre: "Postes Villa Los Reyes", color: "#FF0000", url: "https://raw.githubusercontent.com/pandersonc93-design/mapa-en-vivo/main/VR_Postes_Act.kml" },
+      { nombre: "Postes Ventanilla Centro", color: "#8000FF", url: "https://raw.githubusercontent.com/pandersonc93-design/mapa-en-vivo/main/VC_Postes_Act.kml" }
     ];
 
     const capasActivas = {};
 
+    function cargarCapaKML(url, color) {
+      return omnivore.kml(url, null, L.geoJson(null, {
+        pointToLayer: function (feature, latlng) {
+          return L.circleMarker(latlng, {
+            radius: 5,
+            color: color,
+            weight: 1,
+            fillOpacity: 0.9
+          }).bindTooltip(feature.properties.name || 'Sin ID', { permanent: true, direction: 'top', className: 'label-id' });
+        }
+      })).addTo(map);
+    }
+
     capasDinamicas.forEach(c => {
-      capasActivas[c.nombre] = omnivore.kml(c.url).addTo(map);
+      capasActivas[c.nombre] = cargarCapaKML(c.url, c.color);
     });
 
     // --- RECARGA AUTOMÁTICA CADA 2 MINUTOS ---
@@ -87,12 +100,12 @@
       Object.keys(capasActivas).forEach(nombre => {
         const capa = capasDinamicas.find(c => c.nombre === nombre);
         map.removeLayer(capasActivas[nombre]);
-        capasActivas[nombre] = omnivore.kml(capa.url + "?t=" + Date.now()).addTo(map);
+        capasActivas[nombre] = cargarCapaKML(capa.url + '?t=' + Date.now(), capa.color);
       });
-      console.log("Capas de postes actualizadas:", new Date().toLocaleTimeString());
+      console.log('Capas actualizadas:', new Date().toLocaleTimeString());
     }, 120000);
 
-    // --- LEYENDA ---
+    // --- LEYENDA ÚNICA ---
     const legend = L.control({ position: 'bottomright' });
     legend.onAdd = function () {
       const div = L.DomUtil.create('div', 'legend');
@@ -100,7 +113,6 @@
       rutas.forEach(r => {
         div.innerHTML += `<div><span style="background:${r.color}"></span>${r.nombre}</div>`;
       });
-      div.innerHTML += `<hr>`;
       capasDinamicas.forEach(c => {
         div.innerHTML += `<div><span style="background:${c.color}"></span>${c.nombre}</div>`;
       });
@@ -110,6 +122,7 @@
   </script>
 </body>
 </html>
+
 
 
 
