--- a/index.html
+++ b/index.html
@@ -66,22 +66,27 @@
       padding-left: 10px;
     }
     
-    /* --- INICIO DE BLOQUE NUEVO (CSS para Reporte PMIs) --- */
-    .pmi-dashboard-box div {
-      font-size: 13px;
+    /* --- INICIO DE BLOQUE (CSS para Reporte PMIs) --- */
+    .pmi-list {
+      display: block; /* Asegura que la lista sea vertical */
+    }
+    .pmi-list > div {
+      font-size: 12px; /* Letra más pequeña */
       display: flex;
       align-items: center;
-      margin-bottom: 4px;
+      margin-bottom: 3px; /* Espacio reducido */
+      flex-shrink: 0; /* Evita que se aplasten */
     }
     .pmi-dashboard-box span {
-      width: 12px; 
-      height: 12px; 
+      width: 10px; /* Círculo más pequeño */
+      height: 10px; /* Círculo más pequeño */
       border-radius: 50%;
       border: 1px solid #000;
-      margin-right: 8px;
+      margin-right: 6px; /* Espacio reducido */
       display: inline-block;
+      flex-shrink: 0; /* Evita que el círculo se aplaste */
     }
-    /* --- FIN DE BLOQUE NUEVO --- */
+    /* --- FIN DE BLOQUE--- */
     
     .dashboard-zone-summary {
       margin-bottom: 5px;
@@ -285,7 +290,7 @@
         const count = pmiCounts[p.nombre] || 0; // Obtiene el conteo
         html += `<div>`;
         html += `<span style="background:${colorFijo};"></span>`; // Muestra el círculo de color
-        html += `<strong>${p.nombre}:</strong> ${count} p.`;
+        html += `<strong>${p.nombre}:</strong> ${count}`;
         html += `</div>`;
       });
       container.innerHTML = html;
