Adjust bottom margin for legend in CSS
Increase bottom margin for the legend panel.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
       font-size: 13px;
       box-shadow: 0 0 5px rgba(0,0,0,0.3);
     }
+
+    .leaflet-bottom .legend {
+      /* Aumentamos el margen inferior (por defecto es 10px) */
+      /* Esto empuja los paneles de abajo hacia arriba */
+      margin-bottom: 30px; 
+    }
+    
     .legend h4 {
       margin: 0 0 6px 0;
       font-size: 14px;
