Change layer control to be collapsed by default

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     // 5. Crea el control de capas (aún no lo añadimos al mapa)
     const layerControl = L.control.layers(baseMaps, overlayMaps, {
       position: 'topright', // Moverlo a la derecha
-      collapsed: false // Que aparezca expandido
+      collapsed: true // Que aparezca expandido
     });
     // =======================================================
     // --- FIN DE BLOQUE MODIFICADO ---
