Update URL for existing posts in index.html

--- a/index.html
+++ b/index.html
@@ -309,7 +309,8 @@
 
     // 2. Definir la URL
     const urlPostesExistentes = "https://raw.githubusercontent.com/pandersoncc93-design/mapa-en-vivo/refs/heads/main/PA_postes%20existentes.kml";
-
+    const urlPostesExistentes = "https://raw.githubusercontent.com/pandersoncc93-design/mapa-en-vivo/refs/heads/main/VR_postes%20existentes.kml";
+    
     // 3. Crear la capa
     const capaPostesExistentes = L.geoJson(null, {
       pointToLayer: function (feature, latlng) {
